syntax = "proto3";

option java_multiple_files = true;
option java_package = "de.th.koeln.finanzdaten.grpc";
option java_outer_classname = "FinanzdatenServiceProto";

service FinanzdatenService {
  rpc GetAlleEinnahmen (GetAlleEinnahmenRequest) returns (GetAlleEinnahmenResponse);
  rpc GetAlleAusgaben (GetAlleAusgabenRequest) returns (GetAlleAusgabenResponse);
  rpc GetEinnahmenSumme (GetEinnahmenSummeRequest) returns (GetEinnahmenSummeResponse);
  rpc GetAusgabenSumme (GetAusgabenSummeRequest) returns (GetAusgabenSummeResponse);
}

message GetAlleEinnahmenRequest{
  string kontoId = 1;
}

message GetAlleEinnahmenResponse {
  repeated FinanzdatenDTO einnahmen = 1;
}

message GetAlleAusgabenRequest{
  string kontoId = 1;
}

message GetAlleAusgabenResponse {
  repeated FinanzdatenDTO ausgaben = 1;
}

message GetEinnahmenSummeRequest {
  string kontoId = 1;
}

message GetEinnahmenSummeResponse {
  double einnahmenSumme = 1;
}

message GetAusgabenSummeRequest{
  string kontoId = 1;
}

message GetAusgabenSummeResponse{
  double ausgabensumme = 1;
}

message FinanzdatenDTO {
  string benutzerID = 1;
  string kategorie = 2;
  string bezeichnung = 3;
  string beschreibung = 4;
  string datum = 5;
  string budget = 6;
  string betrag = 7;
}
